--- a/_posts/2020-07-09-3D-Print-1.md
+++ b/_posts/2020-07-09-3D-Print-1.md
@@ -1,9 +1,8 @@
 ---
 layout: post
-title: Design to 3D Print in 30 Minutes
+title: Designing a new product to 3D Print in 30 Minutes.
 excerpt: "Diving deeper into 3D printing. Decided to create a china step buckle for a bag that broke, during covid would have taken long to arrive. A new mountain bike mount, snowboard mount and also a 30 minute design to print challenge."
 categories: [3DPrinting]
-tags: [3dprinting,design]
 comments: true
 galleries:
  1:
@@ -11,6 +10,12 @@ galleries:
      - { url: '/img/china-buckle.jpg', alt: 'China Clip Bag'}
      - { url: '/img/bike-mount.jpg', alt: 'Bike Mount'}
      - { url: '/img/print-action.jpg', alt: 'Mount'}
+ 2:
+   -
+     - { url: '/img/sketch-1.jpg', alt: 'China Clip Bag'}
+     - { url: '/img/sketch-2.jpg', alt: 'China Clip Bag'}
+     - { url: '/img/sketch-3.jpg', alt: 'China Clip Bag'}
+     - { url: '/img/sketch-4.jpg', alt: 'China Clip Bag'}
 
 ---
 
@@ -23,32 +28,40 @@ Thingaverse is the amazon of 3D printing. After some test prints I was comfortab
 All depends on the fill rate and the end product application. Smallest print was a screw test which took 20 minutes and the longest being 18 hours for the first iteration of the bike wall mount
 {: .notice}
 
-## 3D Modeling
+##  Modeling
 Initially over lunch I crafted a door opener with a stylus on the end. This was created in Autodesk Maya and then exported as a .stl file for printing. Cura was used to slice the model, the print wasn't correct however due to an error that I would soon be familiar with 
 
 **WARNING** 
 Your model is not manifold. The highlighted areas indicate either missing or extraneous surfaces.
 {: .notice}
 
-Discovered complex models are tricky to solve manifold where vertex faces dont align as expected with so explored other 3D modeling options. Having experience with inventor I tried Fusion 360 as it looked like a more minimal version. 
+Discovered complex models are tricky to solve manifold where vertex faces don't align as expected with so explored other 3D modeling options. Having experience with inventor I tried Fusion 360 as it looked like a more minimal version. 
 
-First model was the china step buckle design which was a success and got to grips with the CAD concepts again as its more or less 2D drawing on x,y,z transforms and extruding vs vertex manipulation. Better accuracy, longer period of time to model.
+First model was the china step buckle design which was a success and got to grips with the CAD concepts again as its more or less 2D drawing on x,y,z transforms and extruding vs vertex manipulation. Better accuracy, but longer period of time to model. The step buckle worked and replaced the broken one on my bag that you can see below. (spot the 3D printed one!) 
 
-{% include gallery.html  gallery=1 %}
+### Measurements
+After testing the design process using Autodesk fusion, I was ready to try it on a prototype model that is at scale MUCH bigger in relation to the first design to print. We are talking about a 5x5cm buckle to a 20x15cm 3D print which in itself has complications. Therefor speed of iteration became important. As the 3D CAD model needs to be mm accurate I sketched the design out on paper first and used these measurements to translate into the CAD model. Nothing fancy by any means of the imagination but going into this with just an idea wouldn't have worked.  
 
-### Bike Wall Mount
+If the model ended up looking wrong (that gut feeling your design isn't what you visioned in your head, leads into visual-spatial ability to some extent and a rabbit hole of research to check out in the further reading section below) if out of scale it would allow me to adjust and make a modification easier having a basis measurement to go from. This proved really important after the initial prototype where I decided to add in the "wings" to the mount providing a wider surface area on the wall mount and also provide 2 extra screws to support and dissipate the load against a plasterboard wall. 
+{% include gallery.html  gallery=2 %}
+
+## Bike Wall Mount
 
 The next a bike mount. Haven't seen this design anywhere and it is solving a real issue in my life. Ran some simulation tests using "plastic" material in Fusion 360, took a while and never really got a definitive result so ended up mounting the v2 print on a plaster board and then put some weights in a bag and hoped for the best. I live in an apartment and have no access to safely secure my now quite fancy mountain bike, this mount keeps tyres off the floor and will fit any bike. Also removing the wheels will allow for less space taken up by the bike itself. 
 
-{% include gallery.html  gallery=2 %}
+{% include gallery.html  gallery=1 %}
 
-## Fusion 360 vs Maya
+## Modification
+The mount finally gave way after a month so a redesign will include more angular edges to speed up on printing time, but it will also allow me to toy with the curvature of the actual "hook" component. It needs to be shorter leading to the revolve arc. This will keep more of the pressure on the supporting structure and not so much on the far out piece of plastic, essentially keeping the center of gravity closer to the wall = better.
+![Smithsonian Image]({{ site.url }}/img/mount-update.PNG)
 
+
+### Snowboard & Ski Mount
+The next design I want to create is a snowboard mount that is similar to the two cork screw "slide in" approach I have used in the past. Initially simply 3D modeling a corkscrew with a place for a screw, along with some heat shrink tubing to add extra grip and to not damage the edges of the boards. This design would allow me to mount the board vertically or simply put them side by side a meter apart and let the board rest on it. This should conclude storage mediums for my biggest pieces of kit. Hiking bags, harnesses and more are all on 3D printed hooks around door frames making everything really easy to access.
 
 ## Further Reading
 * [Thingaverse](https://www.thingiverse.com/)
-
-
+* [Visual-Spatial Ability](https://aquila.usm.edu/cgi/viewcontent.cgi?article=1236&context=honors_theses)
 
 <a href="#" id="emailclick" onclick="replace_email()">My Email</a>
 
