--- a/_posts/2020-07-09-3D-Print-1.md
+++ b/_posts/2020-07-09-3D-Print-1.md
@@ -16,6 +16,10 @@ galleries:
      - { url: '/img/sketch-2.jpg', alt: 'China Clip Bag'}
      - { url: '/img/sketch-3.jpg', alt: 'China Clip Bag'}
      - { url: '/img/sketch-4.jpg', alt: 'China Clip Bag'}
+ 3:
+   -
+     - { url: '/img/mount-update.PNG', alt: 'Bike Mount'}
+     - { url: '/img/mount-action.png', alt: 'Bike Mount'}
 
 ---
 
@@ -53,8 +57,9 @@ The next a bike mount. Haven't seen this design anywhere and it is solving a rea
 
 ## Modification
 The mount finally gave way after a month so a redesign will include more angular edges to speed up on printing time, but it will also allow me to toy with the curvature of the actual "hook" component. It needs to be shorter leading to the revolve arc. This will keep more of the pressure on the supporting structure and not so much on the far out piece of plastic, essentially keeping the center of gravity closer to the wall = better.
-![Smithsonian Image]({{ site.url }}/img/mount-update.PNG)
 
+
+{% include gallery.html  gallery=3 %}
 
 ### Snowboard & Ski Mount
 The next design I want to create is a snowboard mount that is similar to the two cork screw "slide in" approach I have used in the past. Initially simply 3D modeling a corkscrew with a place for a screw, along with some heat shrink tubing to add extra grip and to not damage the edges of the boards. This design would allow me to mount the board vertically or simply put them side by side a meter apart and let the board rest on it. This should conclude storage mediums for my biggest pieces of kit. Hiking bags, harnesses and more are all on 3D printed hooks around door frames making everything really easy to access.
