--- a/_posts/2021-03-30-phd-part-1.md
+++ b/_posts/2021-03-30-phd-part-1.md
@@ -12,9 +12,12 @@ galleries:
  2:
    -
      - { url: '/img/visual-1.PNG', alt: '1'}
- 2:
+ 3:
    -
      - { url: '/img/small-talk.PNG', alt: '1'}
+ 4:
+   -
+     - { url: '/img/actor.PNG', alt: '1'}
 ---
 
 
@@ -84,7 +87,14 @@ These are all ways of interacting with the computer in real time. Note the term 
 ### Parallel Programming
 This is point 4. Sequential programming to concurrent. The bottle neck is the VON Neumann bottleneck where the CPU is linked up to a memory unit and the processor executes processes consecutively. The memory is mostly idle and not being used as each instruction is being picked out of memory to be executed. 
 
-Massively parallel processor array is alluded to the future of architecture. Todays programming is completed by threads and locks but doesnt scale with numerous processors sharing memmory for obvious reasons. 
+Massively parallel processor array is alluded to the future of architecture. Todays programming is completed by threads and locks but doesn't scale with numerous processors sharing memory for obvious reasons. 
+
+Carl Hewlit came up with the concept of the "Actor Model." Its inspired by physics with particles each having their own state and interacting with their surroundings. Asynchronously doing their own thing and sending messages to each other.
+
+Bret notes that we will need parallel programming hardware. I am uneducated on quantum computing and that is what I will be looking into next when I get some down time from XR Interaction design.
+
+{% include gallery.html  gallery=4 %}
+
 
 # Humane Representation of Thought
 
