Update fix images

--- a/_posts/2021-07-21-games.md
+++ b/_posts/2021-07-21-games.md
@@ -9,17 +9,17 @@ comments: true
 galleries:
  1:
    -
-     - { url: '/img/pixelarcade/1.PNG', alt: '1'}
-     - { url: '/img/pixelarcade/2.PNG', alt: '1'}
-     - { url: '/img/pixelarcade/3.PNG', alt: '1'}    
+     - { url: '/img/pixelarcade/1.png', alt: '1'}
+     - { url: '/img/pixelarcade/2.png', alt: '1'}
+     - { url: '/img/pixelarcade/3.png', alt: '1'}    
  2:
    -
-     - { url: '/img/pixelarcade/Badge1.PNG', alt: '1'}
-     - { url: '/img/pixelarcade/Badge2.PNG', alt: '1'}
-     - { url: '/img/pixelarcade/Badge3.PNG', alt: '1'}
-     - { url: '/img/pixelarcade/Badge4.PNG', alt: '1'}
-     - { url: '/img/pixelarcade/Badge5.PNG', alt: '1'}
-     - { url: '/img/pixelarcade/foil.PNG', alt: '1'}
+     - { url: '/img/pixelarcade/Badge1.png', alt: '1'}
+     - { url: '/img/pixelarcade/Badge2.png', alt: '1'}
+     - { url: '/img/pixelarcade/Badge3.png', alt: '1'}
+     - { url: '/img/pixelarcade/Badge4.png', alt: '1'}
+     - { url: '/img/pixelarcade/Badge5.png', alt: '1'}
+     - { url: '/img/pixelarcade/foil.png', alt: '1'}
 ---
 
 # Pre-face
@@ -61,7 +61,7 @@ Valve uploading mechanism was easy but did require command line terminals and no
 
 > Here is a screenshot of the first upload to steam.
 
-![Vat]({{ site.url }}/img/pixelarcade/firstbuild.PNG)
+![Vat]({{ site.url }}/img/pixelarcade/firstbuild.png)
 {: .pull-center}
 
 
@@ -77,7 +77,7 @@ The release after greenlight had a total of 25 levels. Looking at user stats bac
 
 The game was released in greenlight, viveport, then indie gala and then smile gate stove in that order. Oculus did sent me hardware to develop for their platform, but I didnt see the point. In hindsight perhaps would have been a good move but I didnt want to port from SteamVR to Oculus for my first VR project. In total sold over 7,000 copies on Steam alone. Now most of the revenue comes from Smilegate Stove which are South Korean VR Arcades. The playtime in minutes has increased over 300% in the past 12 months, so safe to say people are starting to look into VR opportunities to play with friends in that market. I do see a future where people can go out for a meal and rather go to a cinema experience, visit a VR type arcade where they can have a 1 hour experience such as the [Apollo Landing HD]() game which I use to showcase VR to most non gamers. It definitely relates well to older demographics as they recall the landing and growing up with the space race.
 
-![Vat]({{ site.url }}/img/pixelarcade/redditcomment.PNG)
+![Vat]({{ site.url }}/img/pixelarcade/redditcomment.png)
 {: .pull-center}
 
 
