--- a/_posts/2021-11-13-vr-future.md
+++ b/_posts/2021-11-13-vr-future.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Architecture Solutions for Cyberspace in XR
-excerpt: "In the process of developing my interaction framework for visualizing multi dimensional data, this post will outline my research objectives and share hypothesis that developers may find useful. But I will be going into decentralization of XR applications for the future as well. "
+title: 👨‍💻 Architecture for Cyberspace in XR
+excerpt: "In the process of developing my interaction framework for visualizing multi dimensional data, this post will outline decentralization of the so called metaverse and how we can leverage new mediums into everyday navigation."
 modified: 2013-05-31
 categories: [VR]
 comments: true
