PDF Whiteboard added

--- a/_posts/2021-12-11-games.md
+++ b/_posts/2021-12-11-games.md
@@ -34,7 +34,7 @@ Click on the icon for trailer / more information about the game. I will say thes
         <div class="game-title">Pixel Arcade</div>
         <div class="game-subtitle">Steam VR</div>
 
-        <p>Originally developed for my 4th year computer science project, released with trading cards and now is on the Smilegate Stove program and being played in arcades in Korea. I am still very proud of this project. </p>
+        <p>Originally developed for my 4th year computer science project, released with trading cards and now is on the Smilegate Stove program and being played in arcades in Korea. I am still very proud of this project. <a href="https://corrie.dev/articles/2021-07/pixel-arcade">Read how it was made here.</a> </p>
 
         <a href="https://store.steampowered.com/app/618570/Pixel_Arcade/" class="btn btn-success">Steam Page</a>
    </div>
