Update: concious part 2 and emoji to cat

--- a/_posts/2021-11-13-vr-future.md
+++ b/_posts/2021-11-13-vr-future.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 🥽 Architecture for Cyberspace in XR
+title: Architecture for Cyberspace in XR 
 excerpt: "In the process of developing my interaction framework for visualizing multi dimensional data, this post will outline decentralization of the so called metaverse and how we can leverage new mediums into everyday navigation."
 modified: 2013-05-31
-categories: [VR]
+categories: [VR🥽]
 comments: true
 pinned: true
 galleries:
