--- a/_posts/2020-07-09-3D-Print-1.md
+++ b/_posts/2020-07-09-3D-Print-1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 🖨️ Designing a new product to 3D Print in 30 Minutes.
+title: Designing a new product to 3D Print in 30 Minutes.
 excerpt: "Diving deeper into 3D printing. Decided to create a china step buckle for a bag that broke, during covid would have taken long to arrive. A new mountain bike mount, snowboard mount and also a 30 minute design to print challenge."
-categories: [3DPrinting]
+categories: [3DPrinting🖨️]
 comments: true
 galleries:
  1:
