Fix download buttons

--- a/_posts/2022-07-12-jwt-vr.md
+++ b/_posts/2022-07-12-jwt-vr.md
@@ -13,7 +13,7 @@ Please download from the link below and extract to get running. So this is versi
 {: .pull-center}
 
 
-<div markdown="0"><a href="{{ site.url }}/releases/jwt_photo_experience.7z" class="btn btn-success">Download</a></div>
+<div markdown="0"><a href="{{ site.url }}/releases/jwt_photo_experience.zip" class="btn btn-success" download >Download</a></div>
 
 ## Types of Skyboxes attempted
 I inverted the normals on a sphere and used this initially as you can see the galaxies a little closer than a skybox based on their scale size. Alas the distortion with the pin hole effect was a little much.
