Update downloads page and remove disquss

--- a/_posts/2021-12-11-games.md
+++ b/_posts/2021-12-11-games.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Download All My Games Here 
+title: Download - All My Games Here 
 excerpt: "I haven't really made games for profit and with Apple / Google policies changing as frequent as they are I can't rebuild every game to support their platform changes. So I have decided to make this my primary game release page where you can directly download my games to experience should they be taken down from other publishing platforms."
-categories: [games👾]
+categories: [Download🔻]
 comments: true
 
 ---
