--- a/_posts/2022-07-12-jwt-vr.md
+++ b/_posts/2022-07-12-jwt-vr.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: James Web Photo Viewer VR App
+title: Download - James Web Photo Viewer VR App (modular 3d gui preview)
 excerpt: "Small standalone application that sets the skybox to the JWT photo images. I have experimented with different skyboxes and have noted my findings inside. The main purpose is to see if it makes it feel any more impactful or if you don't have access to a high resolution display but have an arguably more accessible VR headset then you can view the photos in their FHD glory! "
-categories: [Space🛰️,VR🥽]
+categories: [Download🔻]
 comments: true
 ---
 
