--- a/_posts/2021-11-13-vr-future.md
+++ b/_posts/2021-11-13-vr-future.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: Architecture for Cyberspace Interoperability
-excerpt: "In the process of developing my interaction framework for accessible vr interaction and visualisation, this post will outline decentralization of the "metaverse" and how we can leverage new mediums into everyday navigation."
-modified: 2013-05-31
+excerpt: "In the process of developing my interaction framework for accessible vr interaction and visualisation, this post will outline decentralization of the metaverse and how we can leverage new mediums into everyday navigation."
 categories: [VR🥽]
 comments: true
 pinned: true
